fix: align card to center

--- a/src/components/Stats/Card/StatsCard.module.css
+++ b/src/components/Stats/Card/StatsCard.module.css
@@ -4,6 +4,7 @@
   text-align: center;
   border-radius: 18px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
+  width: 18rem;
 }
 
 .StatsTotal__CardTitle {
@@ -13,4 +14,11 @@
 .StatsTotal__CardStats {
   font-size: 2.5rem;
   font-weight: var(--medium-weight);
+}
+
+/* Medium Screen */
+@media (max-width: 992px) {
+  .StatsTotal__Card {
+    width: 100%;
+  }
 }
